# jit-access-platform

./: CHANGELOG.md  README.md  renovate.json
.github/workflows/: ci-cd.yaml  jit-access-platform-ci.yaml  renovate.yml  semantic-release.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/jit_backend/: config.py  db.py  main.py  security.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  api.js  styles.css
frontend/src/components/: LoginView.vue
frontend/src/views/: AuditView.vue  DashboardView.vue  SessionsView.vue
helm/jit-access/: Chart.yaml  values.example.yaml  values.yaml
helm/jit-access/crds/: jitaccessrequests.devsecops.licenta.ro.yaml
helm/jit-access/templates/: _helpers.tpl  admin-secret.yaml  backend-deployment.yaml  backend-rbac.yaml  backend-service.yaml  clusterrole.yaml  clusterrolebinding.yaml  configmap-policies.yaml  deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  operator-deployment.yaml  operator-rbac.yaml  pvc.yaml  security-policies-configmap.yaml  serviceaccount.yaml  sqlite-pvc.yaml
operator/: Dockerfile  pyproject.toml  requirements.txt
operator/src/jit_operator/: __init__.py  anti_abuse.py  audit_db.py  config.py  operator.py  operator_new.py
scenarios/: 00-prereqs.yaml  10-happy-path.yaml  20-concurrent-limit.yaml  30-hard-cap.yaml  40-blocked-user.yaml  90-cleanup.yaml  README.md
