[project]
name = "jit-operator"
version = "0.1.0"
description = "Zero-Trust JIT Access Kubernetes Operator"
requires-python = ">=3.11"
dependencies = [
  "kopf==1.37.4",
  "kubernetes==30.1.0",
  "python-dateutil==2.9.0.post0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
